--- a/Dockerfile.client
+++ b/Dockerfile.client
@@ -1,7 +1,9 @@
 FROM node:alpine
 WORKDIR /usr/src/app
 
-VOLUME ./client /usr/src/app
-RUN yarn
+COPY ./client ./
+RUN yarn install
+
+VOLUME ./client/src ./src
 
 CMD ["yarn", "dev"]
