--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,20 +4,20 @@ services:
   client:
     container_name: "client"
     build:
+      context: .
       dockerfile: ./Dockerfile.client
     ports:
       - 3000:3000
-    working_dir: /app
     volumes:
       - ./client:/app
 
   server:
     container_name: "server"
     build:
+      context: .
       dockerfile: ./Dockerfile.server
     ports:
       - 3001:3000
-    working_dir: /app
     volumes:
       - ./server:/app
 
