--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -1,3 +1,21 @@
 {
-  "extends": "next/core-web-vitals"
+  "extends": ["next/core-web-vitals", "plugin:import/recommended"],
+  "plugins": ["import"],
+  "rules": {
+    "import/order": [
+      "error",
+      {
+        "newlines-between": "always-and-inside-groups",
+        "groups": [
+          "builtin",
+          "external",
+          "unknown",
+          ["internal", "sibling", "parent"],
+          "index",
+          "object",
+          "type"
+        ]
+      }
+    ]
+  }
 }
