<fix> docker compose volume 잘못 설정 한 부분 수정

--- a/Dockerfile.client
+++ b/Dockerfile.client
@@ -1,9 +1,10 @@
 FROM node:alpine
 WORKDIR /usr/src/app
 
-COPY ./client ./
+COPY ./client/package.json /usr/src/app
+COPY ./client/yarn.lock /usr/src/app
 RUN yarn install
 
-VOLUME ./client/src ./src
+COPY ./client /usr/src/app
 
 CMD ["yarn", "dev"]
