--- a/Dockerfile.server
+++ b/Dockerfile.server
@@ -1,10 +1,10 @@
 FROM node:alpine
 WORKDIR /usr/src/app
 
-COPY ./server /usr/src/app
+COPY ./server/package.json /usr/src/app
+COPY ./server/yarn.lock /usr/src/app
 RUN yarn install
 
-VOLUME ./server/src /usr/src/app/src
-VOLUME ./server/test /usr/src/app/test
+COPY ./server /usr/src/app
 
 CMD ["yarn", "start:dev"]
