--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -1,7 +1,8 @@
 {
-  "extends": ["next/core-web-vitals", "plugin:import/recommended"],
+  "extends": ["next/core-web-vitals", "plugin:import/recommended", "prettier"],
   "plugins": ["import"],
   "rules": {
+    "import/no-unresolved": "off",
     "import/order": [
       "error",
       {
