<fix> docker 에러나는 부분 수정 - node:alpine -> node:latest

--- a/server/.env
+++ b/server/.env
@@ -6,4 +6,4 @@
 
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgresql://soso01:12341234@localhost:5432/nest-study?schema=public"
+DATABASE_URL="postgresql://soso01:12341234@postgresql:5432/nest-study2?schema=public"
