--- a/Dockerfile.server
+++ b/Dockerfile.server
@@ -1,4 +1,4 @@
-FROM node:alpine
+FROM node:latest
 WORKDIR /usr/src/app
 
 COPY ./server/package.json /usr/src/app
@@ -6,5 +6,6 @@ COPY ./server/yarn.lock /usr/src/app
 RUN yarn install
 
 COPY ./server /usr/src/app
+RUN npx prisma generate
 
 CMD ["yarn", "start:dev"]
