--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,7 +26,7 @@ services:
 
   db:
     image: postgres:latest
-    container_name: postgres
+    container_name: postgresql
     ports:
       - 5432:5432
     environment:
